[package]
name = "revault_scripts"
version = "0.1.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
bitcoin = "0.24"
miniscript = { git = "https://github.com/darosior/rust-miniscript", branch = "avoid_recursion"}
revault_tx = { git = "https://github.com/darosior/revault", branch = "test_limits" }
